--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@playwright/test": "^1.22.2",
 		"@smui/menu": "^6.0.0-beta.16",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.65",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
