--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"stream": "0.0.2",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
-		"svelte-feather-icons": "^4.0.0",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
@@ -40,8 +39,10 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@sanity/client": "^3.3.2",
+		"@sanity/image-url": "^1.0.1",
 		"cookie": "^0.4.1",
 		"feather-icons": "^4.29.0",
+		"lucide-svelte": "^0.84.0",
 		"sass": "^1.53.0"
 	}
 }
