--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
 		"@playwright/test": "^1.22.2",
 		"@smui/menu": "^6.0.0-beta.16",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.65",
+		"@sveltejs/adapter-netlify": "^3.0.0",
 		"@sveltejs/kit": "next",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -26,14 +27,14 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-svelte": "^2.10.1",
 		"smui-theme": "^6.0.0-beta.16",
 		"stream": "0.0.2",
-		"svelte": "^3.46.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2"
+		"typescript": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
